re-enforce distinction of rows at small screens with TableSaw on This adds a darker line between rows so it's very clear which record you're looking at.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -15,6 +15,12 @@
         );
       ;
     }
+
+    tr {
+      @media (max-width: $grid-float-breakpoint) {
+        border-bottom: 2px solid $gray;
+      }
+    }
   }
 
   html:not(.tablesaw-enhanced) & {
