allow table to be small than 100% if possible
This means we don't have tables with really wide columns that are
just taking up space. If the table can be thinner, with the cells
fully visible and closer together, then it should be.

This only effects widescreens, and tables with a smaller number of
columns.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -22,12 +22,13 @@
   }
 
   table {
-    td, th {
-      @media (min-width: $grid-float-breakpoint) {
-        max-width: 200px;
-        overflow: hidden;
-      }
+    max-width: 100%;
 
+    @media (min-width: $grid-float-breakpoint) {
+      width: auto;
+    }
+
+    td, th {
       .tablesaw-enhanced & {
         @media (max-width: $grid-float-breakpoint) {
           border-right: 0;
@@ -61,6 +62,25 @@
 
     @media (min-width: $grid-float-breakpoint) {
       word-wrap: inherit;
+    }
+  }
+}
+
+.panel-scrollable {
+  table {
+    width: 100%;
+  }
+
+  td, th {
+    @media (min-width: $grid-float-breakpoint) {
+      max-width: 200px;
+      overflow: hidden;
+    }
+
+    html:not(.tablesaw-enhanced) & {
+      max-width: 200px;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
 }
