add classes to indicate controller and action to body element These classes give us more detailed control over the style of elements across specific pages in css.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
     = javascript_include_tag Sync.adapter_javascript_url
     = render "heap_analytics"
 
-  %body
+  %body{class: "#{body_class}"}
     = render "google_analytics"
     = render "shared/nav"
 
