--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 @import "vendor/tablesaw.stackonly";
 
 @import "global/site-header";
+@import "global/alerts";
 @import "bootstrap_and_overrides";
 @import "documentation";
 @import "scrapers";
