add sass partial for styling alerts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "global/site-header";
+@import "global/alerts";
 @import "bootstrap_and_overrides";
 @import "documentation";
 @import "scrapers";
