On the homepage absolute position the alert above the sheep image

--- a/app/assets/stylesheets/global/_alerts.scss
+++ b/app/assets/stylesheets/global/_alerts.scss
@@ -2,4 +2,12 @@
   body.owners.show & {
     background-color: $offset-color;
   }
+
+  body.static.index & {
+    position: absolute;
+    top: 3.4em;
+    background: transparent;
+    z-index: 99;
+    width: 100%;
+  }
 }
