--- a/app/views/scrapers/_show_normal.html.haml
+++ b/app/views/scrapers/_show_normal.html.haml
@@ -13,15 +13,14 @@
 
     %h4= scraper.description
 
-    - if scraper.last_run && !scraper.last_run.scraped_domains.empty?
+    - if scraper.last_run && !scraper.last_run.scraped_domain_objects.empty?
       %p
         Scrapes
         = scraped_domains_list(scraper.last_run)
       -# Only shows the meta info from the first domain
       -# TODO Figure out what to do with more than one domain
-      - if Domain.find_by(name: scraper.last_run.scraped_domains.first)
-        %blockquote
-          %p= Domain.find_by(name: scraper.last_run.scraped_domains.first).meta_or_title
+      %blockquote
+        %p= scraper.last_run.scraped_domain_objects.first.meta_or_title
 
     - if scraper.owner.buildpacks
       %p.text-warning
