--- a/app/views/alert_mailer/alert_email.text.erb
+++ b/app/views/alert_mailer/alert_email.text.erb
@@ -1,4 +1,4 @@
-Morph is letting you know that
+morph.io is letting you know that
 
 
 <% @broken_runs.each do |run| %>
@@ -21,4 +21,4 @@ Fix it: <%= scraper_url(run.scraper, @analytics_params) %>
 
 -----
 Annoyed by these emails? Then change what you're watching - <%= watching_user_url(@user, @analytics_params) %>
-Morph.io - <%= root_url(@analytics_params) %>
+morph.io - <%= root_url(@analytics_params) %>
