--- a/app/views/documentation/_what_is_new.md.erb
+++ b/app/views/documentation/_what_is_new.md.erb
@@ -36,7 +36,7 @@ You can now write scrapers in Perl thanks to the effort of [@lkundrak](/lkundrak
 * Added this "What's new" page
 
 ### April 17
-* Morph now only needs to ask you for public repository read/write permissions for GitHub.
+* morph.io now only needs to ask you for public repository read/write permissions for GitHub.
   This is what we previously said:
 
   > Why do you ask for read/write access to all my GitHub repositories, even the private ones?
@@ -52,7 +52,7 @@ You can now write scrapers in Perl thanks to the effort of [@lkundrak](/lkundrak
   [changing your API](https://developer.github.com/changes/2014-04-04-create-public-repo-without-repo-scope/).
 
 * You might have heard about the [heartbleed bug](http://heartbleed.com/). On the day heartbleed was
-  announced we patched the morph server. This stops anyone from exploiting the bug to gain
+  announced we patched the morph.io server. This stops anyone from exploiting the bug to gain
   access to the SSL private key. No passwords are stored on our server because we authenticate
   against GitHub using oauth. To be safe we've refreshed everyone's github oauth access token.
 
