--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -55,7 +55,7 @@
 
       .col-md-6
         %blockquote
-          %p I love Morph because it gives you everything you need to run a scraper. I've written a system which notifies me when Australian FOI disclosure logs are updated.
+          %p I love morph.io because it gives you everything you need to run a scraper. I've written a system which notifies me when Australian FOI disclosure logs are updated.
           %footer
             = link_to "https://morph.io/hailspuds", class: 'h-card media' do
               .pull-left
