--- a/app/views/documentation/pricing.html.haml
+++ b/app/views/documentation/pricing.html.haml
@@ -2,7 +2,7 @@
 .container
   %h1 Pricing
 
-  %h3 During Morph.io’s beta period the service is free
+  %h3 During morph.io’s beta period the service is free
   = image_tag "blurred_pricing.jpg", class: "center-block"
 
   :markdown
@@ -10,12 +10,12 @@
     most useful to you and also allows us to understand what it costs us to run
     this service for you.
 
-    It is our intention to keep Morph.io free for most people; so if you’re a
+    It is our intention to keep morph.io free for most people; so if you’re a
     casual user who has a few scrapers that are lightweight, morph.io will stay
     free and become an incredibly useful tool that you can depend on.
 
     For the heavy users, based on actual usage, we will be bringing in very
-    reasonable paid plans that help pay for continued development of Morph and
+    reasonable paid plans that help pay for continued development of morph.io and
     its server infrastructure.
 
     We also plan to support private scrapers which will be under a paid plan as well.
