--- a/app/views/owners/settings.html.haml
+++ b/app/views/owners/settings.html.haml
@@ -12,7 +12,7 @@
         You
       - else
         They
-      will need this to use the API and the Morph command line client
+      will need this to use the API and the morph.io command line client
     %p
       This key is just for #{@owner == current_user ? "you" : "them"}. Don't give it to anyone else.
   - else
