add fake user results with hardcoded list of users

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -17,6 +17,8 @@
       %li{role: "presentation"}
         = link_to "Users", "#"
 
+  = render partial: "users/fake_users_list"
+
   = paginate @scrapers
   = render partial: "sync/scrapers/scraper", collection: @scrapers
   = paginate @scrapers
