--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -7,9 +7,9 @@
     %h1.label-heading
       %label Search Scrapers and Users:
     .input-group.col-sm-12.col-md-8.col-lg-7
-      %input.form-control#query{required: "required", type: "search", autofocus: (@q.blank? ? true : false), maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
+      %input.form-control.input-lg#query{required: "required", type: "search", autofocus: (@q.blank? ? true : false), maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
       .input-group-btn
-        %button.btn.btn-primary{type: "submit"} Search
+        %button.btn.btn-primary.btn-lg{type: "submit"} Search
 
   %ul.nav.nav-tabs
     %li{role: "presentation"}
