remove unused class (refactor only)

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -3,7 +3,7 @@
   -#   Search for
   -#   = @q
 
-  %form.form-inline.search{action: search_path}
+  %form.form-inline{action: search_path}
     %h1.label-heading
       %label Search Scrapers and Users:
     .input-group.col-sm-12.col-md-8.col-lg-7
