comment out the scraper results for user results prototype

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -19,9 +19,9 @@
 
   = render partial: "users/fake_users_list"
 
-  = paginate @scrapers
-  = render partial: "sync/scrapers/scraper", collection: @scrapers
-  = paginate @scrapers
+  -# = paginate @scrapers
+  -# = render partial: "sync/scrapers/scraper", collection: @scrapers
+  -# = paginate @scrapers
 
   - if @scrapers.empty?
     %h2 No results found
