toggle the tabs 'active' style based on the type param

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -12,11 +12,11 @@
           %button.btn.btn-primary.btn-lg{type: "submit"} Search
 
   %ul.nav.nav-tabs
-    %li{role: "presentation"}
+    %li{class: ('active' unless @type == "Users"), role: "presentation"}
       = link_to "#" do
         Scrapers
         %span.badge #{@scrapers.size}
-    %li.active{role: "presentation"}
+    %li{class: ('active' if @type == "Users"), role: "presentation"}
       = link_to "#" do
         Users
         %span.badge 7
