show the scraper search results if the type isn't 'Users' uncomments the scraper search results

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -21,11 +21,12 @@
         Users
         %span.badge 7
 
-  = render partial: "users/fake_users_list"
-
-  -# = paginate @scrapers
-  -# = render partial: "sync/scrapers/scraper", collection: @scrapers
-  -# = paginate @scrapers
+  - if @type == "Users"
+    = render partial: "users/fake_users_list"
+  - else
+    = paginate @scrapers
+    = render partial: "sync/scrapers/scraper", collection: @scrapers
+    = paginate @scrapers
 
   - if @scrapers.empty?
     %h2 No results found
