use the rails helper form_tag and specify 'get' method This is to match the site-header search. It will add the utf8=✓ param to the request.

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -3,7 +3,7 @@
   -#   Search for
   -#   = @q
   .search-header
-    %form.form-inline{action: search_path}
+    =form_tag search_path, method: "get", class: "form-inline" do
       %h1.label-heading
         %label Search
       .input-group.col-sm-12.col-md-8.col-lg-7
