adapt the no results text for having no users as well Only show the no results text if there are no scrapers and no users as well.

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -30,10 +30,10 @@
     = render partial: "sync/scrapers/scraper", collection: @scrapers
     = paginate @scrapers
 
-  - if @scrapers.empty?
+  - if @scrapers.empty? && @users.empty?
     %h2 No results found
     %p
-      Sorry, we couldn't find any scrapers relevant to your search term
+      Sorry, we couldn't find any scrapers or users relevant to your search term
       %strong “#{@q}”.
     %p
       Suggestions:
