customise 'no results' message for type pages if there *are* results but not of the kind your looking at with the type param, show an appropriate message, rather than just no results.

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -30,7 +30,13 @@
     = render partial: "sync/scrapers/scraper", collection: @scrapers
     = paginate @scrapers
 
-  - if @scrapers.empty? && @users.empty?
+  - if @type == "Users" && @users.empty? && @scrapers.any?
+    Sorry, we couldn’t find any users relevant to your search term
+    %strong “#{@q}”.
+  - elsif @type != "Users" && @scrapers.empty? && @users.any?
+    Sorry, we couldn’t find any scrapers relevant to your search term
+    %strong “#{@q}”.
+  - elsif @scrapers.empty? && @users.empty?
     %h2 No results found
     %p
       Sorry, we couldn't find any scrapers or users relevant to your search term
