Use rails magic to render correct partial

--- a/app/views/static/search.html.haml
+++ b/app/views/static/search.html.haml
@@ -21,7 +21,7 @@
 
     - if @type == "Users"
       = paginate @owners
-      = render partial: "users/user", collection: @owners
+      = render @owners
       = paginate @owners
     - else
       = paginate @scrapers
