--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -11,7 +11,7 @@
   - if @q
     %ul.nav.nav-tabs
       %li{class: ('active' unless @type == "users"), role: "presentation"}
-        = link_to search_path(q: @q, type: "scrapers") do
+        = link_to search_path(q: @q, type: nil) do
           Scrapers
           %span.badge #{@scrapers.size}
       %li{class: ('active' if @type == "users"), role: "presentation"}
