--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -4,6 +4,7 @@
       %h1.label-heading
         %label Search
       .input-group.col-sm-12.col-md-8.col-lg-7
+        = hidden_field_tag :type, @type
         %input.form-control.input-lg#query{required: "required", type: "search", autofocus: (@q.blank? ? true : false), maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
         .input-group-btn
           %button.btn.btn-primary.btn-lg{type: "submit"} Search
