--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.search-header {
+  margin-bottom: 2em;
+
+  + .nav-tabs {
+    margin-bottom: 2em;
+  }
+}
