Apply background colour to parent div so that backstretch doesn't override it

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -11,8 +11,11 @@
   }
 }
 
-.container#banner {
+.banner-wrapper {
   background-color: #716b58;
+}
+
+.container#banner {
   color: white;
   padding-bottom: 1.5em;
   text-align: center;
