--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -6,7 +6,7 @@
       = link_to "Get started", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-success btn-lg", id: "get_started_btn"
 
 :javascript
-  $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}");
+  $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}", {fade: "slow"});
 
 .banner#benefits
   .container
