Just highlight the name of a user in the search results

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -22,7 +22,8 @@
 
     - if @type == "users"
       = paginate @owners
-      = render @owners
+      - @owners.with_details.each do |owner, details|
+        = render owner, details: details
       = paginate @owners
     - else
       = paginate @scrapers
