--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -5,7 +5,12 @@
     .col-md-7
       %div= user.nickname
       - if user.name
-        %div= user.name
+        %div
+          - if details && details[:highlight] && details[:highlight][:name]
+            -# Hmmm... not sure I should just blindly mark it as safe
+            = details[:highlight][:name].html_safe
+          - else
+            = user.name
       - if !user.company.blank?
         %div= user.company
       - elsif !user.blog.blank?
