--- a/app/views/organizations/_organization.html.haml
+++ b/app/views/organizations/_organization.html.haml
@@ -1,32 +1,21 @@
+- highlight = {} unless defined?(highlight)
+
 = link_to organization, class: "list-group-item" do
   .row
     .col-md-2
       = owner_image(organization, 80, false)
     .col-md-7
-      %div
-        - if defined?(details) && details[:highlight] && details[:highlight][:nickname]
-          = details[:highlight][:nickname].html_safe
-        - else
-          = organization.nickname
+      -# Hmmm... not sure I should just blindly mark it as safe
+      %div= highlight[:nickname] ? highlight[:nickname].html_safe : organization.nickname
       - if organization.name
-        %div
-          - if defined?(details) && details[:highlight] && details[:highlight][:name]
-            -# Hmmm... not sure I should just blindly mark it as safe
-            = details[:highlight][:name].html_safe
-          - else
-            = organization.name
+        -# Hmmm... not sure I should just blindly mark it as safe
+        %div= highlight[:name] ? highlight[:name].html_safe : organization.name
       - if !organization.company.blank?
-        %div
-          - if defined?(details) && details[:highlight] && details[:highlight][:company]
-            = details[:highlight][:company].html_safe
-          - else
-            = organization.company
+        -# Hmmm... not sure I should just blindly mark it as safe
+        %div= highlight[:company] ? highlight[:company].html_safe : organization.company
       - elsif !organization.blog.blank?
-        %div
-          - if defined?(details) && details[:highlight] && details[:highlight][:blog]
-            = details[:highlight][:blog].html_safe
-          - else
-            = organization.blog
+        -# Hmmm... not sure I should just blindly mark it as safe
+        %div= highlight[:blog] ? highlight[:blog].html_safe : organization.blog
     .col-md-3
       - if organization.scrapers.count > 0
         %div
