--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -22,12 +22,14 @@
 
     - if @type == "users"
       = paginate @owners
-      - @owners.with_details.each do |owner, details|
-        = render owner, highlight: details[:highlight]
+      .search-results
+        - @owners.with_details.each do |owner, details|
+          = render owner, highlight: details[:highlight]
       = paginate @owners
     - else
       = paginate @scrapers
-      = render partial: "sync/scrapers/scraper", collection: @scrapers
+      .search-results
+        = render partial: "sync/scrapers/scraper", collection: @scrapers
       = paginate @scrapers
 
     - if @type == "users" && @owners.empty? && @scrapers.any?
