Handle situation if highlight is nil

--- a/app/views/organizations/_organization.html.haml
+++ b/app/views/organizations/_organization.html.haml
@@ -1,4 +1,4 @@
-- highlight = {} unless defined?(highlight)
+- highlight = {} unless defined?(highlight) && highlight
 
 = link_to organization, class: "list-group-item" do
   .row
