Add highlighting to scraper search results

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -29,7 +29,8 @@
     - else
       = paginate @scrapers
       .search-results
-        = render @scrapers
+        - @scrapers.with_details.each do |scraper, details|
+          = render scraper, highlight: details[:highlight]
       = paginate @scrapers
 
     - if @type == "users" && @owners.empty? && @scrapers.any?
