--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,22 +1,21 @@
 - highlight = {} unless defined?(highlight) && highlight
 
-= link_to user, class: "list-group-item" do
+= link_to user, class: "list-group-item media" do
   - if @q
-    .row
-      .col-md-2
-        = owner_image(user, 80, false)
-      .col-md-7
+    .media-left
+      = owner_image(user, 80, false)
+    .media-body
+      -# Hmmm... not sure I should just blindly mark it as safe
+      %div= highlight[:nickname] ? highlight[:nickname].html_safe : user.nickname
+      - if user.name
         -# Hmmm... not sure I should just blindly mark it as safe
-        %div= highlight[:nickname] ? highlight[:nickname].html_safe : user.nickname
-        - if user.name
-          -# Hmmm... not sure I should just blindly mark it as safe
-          %div= highlight[:name] ? highlight[:name].html_safe : user.name
-        - if !user.company.blank?
-          -# Hmmm... not sure I should just blindly mark it as safe
-          %div= highlight[:company] ? highlight[:company].html_safe : user.company
-        - elsif !user.blog.blank?
-          -# Hmmm... not sure I should just blindly mark it as safe
-          %div= highlight[:blog] ? highlight[:blog].html_safe : user.blog
+        %div= highlight[:name] ? highlight[:name].html_safe : user.name
+      - if !user.company.blank?
+        -# Hmmm... not sure I should just blindly mark it as safe
+        %div= highlight[:company] ? highlight[:company].html_safe : user.company
+      - elsif !user.blog.blank?
+        -# Hmmm... not sure I should just blindly mark it as safe
+        %div= highlight[:blog] ? highlight[:blog].html_safe : user.blog
 
   - else
     .row
