--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,6 +1,6 @@
 - highlight = {} unless defined?(highlight) && highlight
 
-= link_to user, class: "list-group-item media" do
+= link_to user, class: "media" do
   - if @q
     .media-left
       = owner_image(user, 100, false)
