add space between user image and text for wide screens (css only)

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -26,4 +26,10 @@
   + .owner-item {
     margin-top: 1.5em;
   }
+
+  .media-left {
+    @media (min-width: $screen-sm-min) {
+      padding-right: 15px;
+    }
+  }
 }
