make the owner's nickname stand out even more (css only)

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -38,4 +38,10 @@
     margin-top: 5px;
     color: $link-color;
   }
+
+  .owner-nickname {
+    margin-bottom: 5px;
+    display: block;
+    font-size: $font-size-large;
+  }
 }
