make only the owner item title underlined on focus/hover (css only)

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -24,6 +24,16 @@
   display: block;
   color: $text-color;
 
+  &:hover,
+  &:focus {
+    text-decoration: none;
+
+    .media-heading {
+      color: $link-hover-color;
+      text-decoration: $link-hover-decoration;
+    }
+  }
+
   + .owner-item {
     margin-top: 1.5em;
   }
