--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -35,7 +35,7 @@
                         - row.each_value do |v|
                           %td
                             %div.has-popover{data: {toggle: "popover", placement: "bottom", trigger: "hover", content: v, container: "body"}}
-                              = auto_link_fallback(v.to_s)
+                              = is_url?(v.to_s) ? auto_link_fallback(v.to_s) : escape_once(v.to_s)
   - else
     %h3 Data
     .alert.alert-danger(role="alert")
