Revert "Merge pull request #648 from openaustralia/revert-640-user_results_display"
This reverts commit 7433cc8da2913a21d4b7d2e2071da4b0ba74f9c8, reversing
changes made to 7bc4d0d09643e5921b771eb58b11dd03902cbe3f.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -19,3 +19,27 @@
   padding-top: 15px;
   padding-bottom: 15px;
 }
+
+.owner-item {
+  + .owner-item {
+    margin-top: 1.5em;
+  }
+
+  .media-left {
+    @media (min-width: $screen-sm-min) {
+      padding-right: 15px;
+    }
+  }
+
+  .media-heading {
+    margin-top: 3px;
+    color: $link-color;
+    font-weight: bold;
+  }
+
+  .owner-nickname {
+    margin-bottom: 5px;
+    display: block;
+    font-size: $font-size-large;
+  }
+}
