show scraper language on search results style the language to be faded, not the most salient, but clear on the righthand side of the scraper-item.
This is so citizens can quickly find scrapers they can work with
in a language they can understand.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -211,6 +211,13 @@ a i.fa-clock-o {
   .full_name {
     word-break: break-all;
   }
+
+  .scraper-lang {
+    margin-top: .2em;
+    padding-left: .5em;
+    color: lighten($gray-light, 10%);
+    font-weight: bold;
+  }
 }
 
 h1.full_name {
