make the 'no results of type' message more prominent Wrap the no results message in a blue alert box, like the 'this scraper has no been run' message on scrapers#show pages.

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -33,11 +33,13 @@
         = paginate @scrapers
 
       - if @type == "users" && @owners.empty? && @scrapers.any?
-        Sorry, we couldn’t find any users relevant to your search term
-        %strong “#{@q}”.
+        .alert.alert-info
+          Sorry, we couldn’t find any users relevant to your search term
+          %strong “#{@q}”.
       - elsif @type != "users" && @scrapers.empty? && @owners.any?
-        Sorry, we couldn’t find any scrapers relevant to your search term
-        %strong “#{@q}”.
+        .alert.alert-info
+          Sorry, we couldn’t find any scrapers relevant to your search term
+          %strong “#{@q}”.
     - else
       %h2 No results found
       %p
