show the scraper's language on the sync version of scraper lists This is for consistency with the search results.
Note that this updates to cache version of the partial to v3.

--- a/app/views/sync/scrapers/_scraper.html.haml
+++ b/app/views/sync/scrapers/_scraper.html.haml
@@ -1,6 +1,8 @@
-- cache ["v2", scraper] do
+- cache ["v3", scraper] do
   = link_to scraper, class: "list-group-item" do
     %div.scraper-block
+      - unless scraper.language.blank?
+        %small.scraper-lang.pull-right= scraper.language.human
       .icon-box.pull-right= render partial: "scrapers/running_indicator", locals: {scraper: scraper}
       .icon-box.pull-right= render partial: "scrapers/auto_clock", locals: {scraper: scraper}
       - if scraper.last_run && scraper.last_run.finished_with_errors?
