Remove links - this isn't a huge page to scroll

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -1,17 +1,8 @@
 - content_for :title, "Documentation"
 
-.row
-  .col-sm-9
-    %ul
-      %li= link_to "What languages can scrapers be written in?", "#languages"
-      %li= link_to "In what format do I write out the data I've scraped?", "#format"
-      %li= link_to "What version of the language and what libraries do I have access to?", "#libraries"
-      %li= link_to "What if I want to install a library that isn't currently installed?", "#install"
-      %li= link_to "How do I run a scraper on my own machine?", "#run_locally"
-      %li= link_to "What limits are there on numbers of scrapers, usage, etc.?", "#limits"
-      %li= link_to "Your responsibility", "#responsibility"
-  .col-sm-3
-    = improve_button "Improve this page", "index.html.haml"
+/ .row
+/   .col-sm-9
+/     TODO: Add a really simple introduction to what morph.io is and what it does
 
 .row
   .col-sm-9
