Change headers from questions to simple user-focussed headings

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -6,21 +6,21 @@
 
 .row
   .col-sm-9
-    %h3.section#languages What languages can scrapers be written in?
+    %h3.section#languages Programming languages
     = render "documentation/faq/languages"
   .col-sm-3
     = improve_button "Improve this section", "faq/_languages.html.haml"
 
 .row
   .col-sm-9
-    %h3.section#format In what format do I write out the data I've scraped?
+    %h3.section#format Storing your data
     = render "documentation/faq/format"
   .col-sm-3
     = improve_button "Improve this section", "faq/_format.html.haml"
 
 .row
   .col-sm-9
-    %h3.section#libraries What version of the language and what libraries do I have access to?
+    %h3.section#libraries Language versions and libraries
     :markdown
       #{render "documentation/faq/libraries.md"}
   .col-sm-3
@@ -28,7 +28,7 @@
 
 .row
   .col-sm-9
-    %h3.section#install What if I want to install a library that isn't currently installed?
+    %h3.section#install Other libraries
     :markdown
       #{render "documentation/faq/install.md"}
   .col-sm-3
@@ -36,7 +36,7 @@
 
 .row
   .col-sm-9
-    %h3.section#run_locally How do I run a scraper on my own machine?
+    %h3.section#run_locally Testing your scraper locally
     :markdown
       #{render "documentation/faq/run_locally.md"}
   .col-sm-3
@@ -44,7 +44,7 @@
 
 .row
   .col-sm-9
-    %h3.section#limits What limits are there on numbers of scrapers, usage, etc.?
+    %h3.section#limits Usage limits
     :markdown
       #{render "documentation/faq/limits.md"}
   .col-sm-3
